--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,17 +14,17 @@ requests = "^2.28.1"
 typer = "^0.7.0"
 python-dotenv = "^0.21.0"
 pydantic = "^1.10.2"
-Telethon >= "1.26.0"
+Telethon = "^1.26.0"
 cryptg = "^0.4.0"
 Pillow = ">=9.3,<11.0"
 hachoir = "^3.1.3"
 aiohttp = "^3.8.3"
-tg-login >= "^0.0.4"
+tg-login = "^0.0.4"
 "watermark.py" = "^0.0.3"
 pytesseract = "^0.3.7"
 rich = "^12.6.0"
 verlat = "^0.1.0"
-streamlit >= "^1.15.2"
+streamlit = "^1.15.2"
 PyYAML = "^6.0"
 pymongo = "^4.3.3"
 
